@@ -1,3 +1,8 @@
+2005-12-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/aobjects.R: Changed package document structure to avoid class
+	dependency problems.
+
 2005-12-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* Wrote a script for the ModLewis Split for the Reuters-21578 XML
